--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div id="main" class="main"></div>
-  <script src="picshare.js"></script>
+  <script src="elm.js"></script>
   <script>
   Elm.Picshare.init({
     node: document.getElementById('main')
